SERVER-49796 use in-class member initialization for _reversePos